# smart-weather-service

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile.dockerfile  ManualBuild.md  Readme.md  heroku.yml  main.cpp
ApiConnection/: ApiConnection.hpp
Credentials/: Credentials.hpp
JsonParser/: README.md
QueryGenerators/: CitiesQueryGenerator.hpp  WeatherQueryGenerator.hpp
Sources/: main.cpp
Sources/ApiConnection/: ApiConnection.hpp
Sources/Clients/: ConsoleClient.hpp
Sources/Clients/Console/: main.cpp
Sources/Clients/Telegram/: TelegramClient.hpp  main.cpp
Sources/Credentials/: Credentials.hpp
Sources/Logger/: Logger.hpp
Sources/QueryGenerators/: CitiesQueryGenerator.hpp  QueryGenerators.hpp  WeatherQueryGenerator.hpp
Sources/WeatherCore/: WeatherCore.hpp
WeatherCore/: WeatherCore.hpp
